--- a/09finaldata.Rmd
+++ b/09finaldata.Rmd
@@ -1374,7 +1374,8 @@ eyegaze_heat_all <- fulldata %>%
 
 ggplot(eyegaze_heat, aes(x = maingroup, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
-  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,.71), labels = percent, name = "looking time") +
+#  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,.71), labels = percent, name = "looking time") +
+    scale_fill_gradient(low = "#ffffff", high = "#08519c", space = "Lab", limits = c(0,.71), labels = percent, name = "looking time", na.value = "grey50") +
   theme_bw() +
   theme(axis.text.x=element_text(angle=30,hjust=1),
         strip.text.x = element_text(size = 11, color = "black", face = "italic"), 
@@ -1388,14 +1389,14 @@ ggplot(eyegaze_heat, aes(x = maingroup, y = aoi)) +
 
 ggplot(eyegaze_heat_all, aes(x = maingroup, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
-  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,.71), labels = percent, name = "looking time") +
+#  scale_fill_distiller(palette = "Blues", direction=1, limits = c(0,.71), labels = percent, name = "looking time") +
+  scale_fill_gradient(low = "#ffffff", high = "#08519c", space = "Lab", limits = c(0,.71), labels = percent, name = "looking time", na.value = "grey50") +
   theme_bw() +
   theme(axis.text.x=element_text(angle=30,hjust=1), 
   panel.grid.major = element_line(color = "white")) +
   ylab("") + xlab("") + ggtitle("Eye Gaze Heat Map (Direction Collapsed)") +
   scale_y_discrete(expand=c(0,0)) +
-  scale_x_discrete(expand = c(0,0))
-
+  scale_x_discrete(expand=c(0,0))
 ```
 
 # Summary
